[Feature] Button Full Width (block prop) (#352)
---------

Co-authored-by: Rez <13340707+rezrah@users.noreply.github.com>
Co-authored-by: rezrah <rezrah@users.noreply.github.com>

--- a/apps/docs/content/components/Button/index.mdx
+++ b/apps/docs/content/components/Button/index.mdx
@@ -73,6 +73,12 @@ Subtle buttons have a transparent background with translucent hover and active s
 
 ![An image showing all subtle states.](https://github.com/primer/brand/assets/912236/7420969a-e561-4fd6-9bef-7340e2b0a7e8)
 
+#### Block
+
+Turning on the block option for button allows the button to span the full width of its container. This feature can be particularly useful when you want the button to occupy more space. Block button can continue to pair with secondary or primary variants.
+
+![An image showing block button with all subtle states.](https://github.com/primer/brand/assets/131988618/eb7ab85e-c9b1-49ed-93be-ad3e5bff656e)
+
 ### Trailing and leading icons
 
 You can place an icon inside the button in either the leading or the trailing position to enhance the visual context. It is recommended to use an use an [Octicon](https://primer.style/octicons) here.
