--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -18,9 +18,9 @@ import {VideoPlayer} from '@primer/react-brand'
 
 ```jsx live
 <VideoPlayer title="HLS On Demand Demo">
-  <VideoPlayer.Source src="https://github.githubassets.com/images/modules/growth/actions/ci-cd-actions.h264.mp4" />
+  <VideoPlayer.Source src="/example.mov" />
   <VideoPlayer.Track
-    src="https://raw.githubusercontent.com/JoshBowdenConcepts/Subtitles-Example/main/sample.vtt"
+    src="/example.vtt"
     default
     kind="subtitles"
     srcLang="en"
@@ -36,9 +36,9 @@ import {VideoPlayer} from '@primer/react-brand'
   poster="https://github.githubassets.com/images/icons/media-player/poster.jpg"
   title="HLS On Demand Demo"
 >
-  <VideoPlayer.Source src="https://github.githubassets.com/images/modules/growth/actions/ci-cd-actions.h264.mp4" />
+  <VideoPlayer.Source src="/example.mov" />
   <VideoPlayer.Track
-    src="https://raw.githubusercontent.com/JoshBowdenConcepts/Subtitles-Example/main/sample.vtt"
+    src="/example.vtt"
     default
     kind="subtitles"
     srcLang="en"
@@ -51,9 +51,9 @@ import {VideoPlayer} from '@primer/react-brand'
 
 ```jsx live
 <VideoPlayer branding={false} title="HLS On Demand Demo">
-  <VideoPlayer.Source src="https://github.githubassets.com/images/modules/growth/actions/ci-cd-actions.h264.mp4" />
+  <VideoPlayer.Source src="/example.mov" />
   <VideoPlayer.Track
-    src="https://raw.githubusercontent.com/JoshBowdenConcepts/Subtitles-Example/main/sample.vtt"
+    src="/example.vtt"
     default
     kind="subtitles"
     srcLang="en"
