Removed Unessesary Props from Docs

--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -19,13 +19,7 @@ import {VideoPlayer} from '@primer/react-brand'
 ```jsx live
 <VideoPlayer title="HLS On Demand Demo">
   <VideoPlayer.Source src="/example.mov" />
-  <VideoPlayer.Track
-    src="/example.vtt"
-    default
-    kind="subtitles"
-    srcLang="en"
-    label="English"
-  />
+  <VideoPlayer.Track src="/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -37,13 +31,7 @@ import {VideoPlayer} from '@primer/react-brand'
   title="HLS On Demand Demo"
 >
   <VideoPlayer.Source src="/example.mov" />
-  <VideoPlayer.Track
-    src="/example.vtt"
-    default
-    kind="subtitles"
-    srcLang="en"
-    label="English"
-  />
+  <VideoPlayer.Track src="/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -52,13 +40,7 @@ import {VideoPlayer} from '@primer/react-brand'
 ```jsx live
 <VideoPlayer branding={false} title="HLS On Demand Demo">
   <VideoPlayer.Source src="/example.mov" />
-  <VideoPlayer.Track
-    src="/example.vtt"
-    default
-    kind="subtitles"
-    srcLang="en"
-    label="English"
-  />
+  <VideoPlayer.Track src="/example.vtt" />
 </VideoPlayer>
 ```
 
