--- a/apps/docs/content/components/Checkbox/react.mdx
+++ b/apps/docs/content/components/Checkbox/react.mdx
@@ -8,9 +8,11 @@ description: Use the checkbox component to select one or more options of a limit
 ---
 
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 import {Label} from '@primer/react'
 import {Link} from 'gatsby'
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
 
 ## Examples
 
