--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -83,7 +83,7 @@ The component API supports all standard HTML attribute props, while providing so
 
 | Name      | Type                                                            | Default | Required | Description                                                                                                                              |
 | :-------- | :-------------------------------------------------------------- | :-----: | :------: | :--------------------------------------------------------------------------------------------------------------------------------------- |
-| `src`     | `boolean`                                                       |         |  `true`  | Sets the source of the VTT file containing captions                                                                                      |
+| `src`     | `string`                                                        |         |  `true`  | Sets the source of the VTT file containing captions                                                                                      |
 | `kind`    | `subtitles`, `captions`, `descriptions`, `chapters`, `metadata` |         | `false`  | Sets how the text track is meant to be used                                                                                              |
 | `srcLang` | `string`                                                        |         | `false`  | Language of the text data. It must be a valid [BCP 47](https://r12a.github.io/app-subtags/) language tag.                                |
 | `label`   | `string`                                                        |         | `false`  | A user-readable title of the text track which is used by the browser when listing available text tracks.                                 |
