Added dark mode items

--- a/apps/docs/content/components/Bento.mdx
+++ b/apps/docs/content/components/Bento.mdx
@@ -58,6 +58,17 @@ import {Bento} from '@primer/react-brand'
 </Bento>
 ```
 
+### Dark Mode Items
+
+```jsx live
+<Bento>
+  <Bento.Item columnSpan={7} rowSpan={4} colorMode="dark" />
+  <Bento.Item columnSpan={5} rowSpan={4} colorMode="dark" />
+  <Bento.Item columnSpan={12} rowSpan={4} colorMode="dark" />
+  <Bento.Item columnSpan={12} rowSpan={4} colorMode="dark" />
+</Bento>
+```
+
 ## Component props
 
 ### Bento
