fix documentation for heading, box and timeline

--- a/apps/docs/content/components/Box/react.mdx
+++ b/apps/docs/content/components/Box/react.mdx
@@ -27,6 +27,12 @@ import {Box} from '@primer/react-brand'
 
 ## Examples
 
+<Note>
+
+Box requires the `dir` attribute to be set on the `<html>` element to ensure the correct visual apperance and layout of the timeline items.
+
+</Note>
+
 ### Default
 
 The `Box` component, by default, represents an empty `<div>` element with no predefined styles applied to it.
