--- a/apps/docs/content/components/Box/react.mdx
+++ b/apps/docs/content/components/Box/react.mdx
@@ -29,7 +29,7 @@ import {Box} from '@primer/react-brand'
 
 <Note>
 
-Box requires the `dir` attribute to be set on the `<html>` element to ensure the correct visual apperance and layout of the timeline items.
+Box requires the `dir` attribute to be set on the `<html>` element to ensure that directional padding and margin values are applied correctly.
 
 </Note>
 
