--- a/apps/docs/content/components/Timeline.mdx
+++ b/apps/docs/content/components/Timeline.mdx
@@ -17,7 +17,7 @@ import {Timeline} from '@primer/react-brand'
 
 <Note>
 
-Timeline requires the `dir` attribute to be set on the `<html>` element to ensure the correct visual apperance and layout of the timeline items.
+Timeline requires the `dir` attribute to be set on the `<html>` element to ensure the correct visual apperance of timeline items.
 
 </Note>
 
