--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -103,6 +103,42 @@ A single river component acts as a section and it should not include any child s
   </Dont>
 </DoDontContainer>
 
+### Breakout river
+
+A river component has an image that fills the width of the container while providing more space for content such as text and lists.
+
+This is useful when you want to create a highlight which can be used to create more emphasis or simply break a monotonous vertical flow of left/right rivers. It can also be helpful on smaller viewports to avoid the of stacking two images or two chunks of text from adjacent river components.
+
+Some examples of when to use a breakout river:
+
+- Expand on more complex feature that require more room for content
+- Give designer a tool to emphasize the feature story
+- Use a branded wallpaper in a more cinematic way than the standard 50/50 or 60/40 text-to-image column ratios
+
+<DoDontContainer>
+  <Do>
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/2313998/103940cc-d3fc-47da-94c3-698c7c0c9b4a"
+    />
+    <Caption>
+      Use a river breakout to emphasize a part of the river or break up a series
+      of river component.
+    </Caption>
+  </Do>
+  <Dont>
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/2313998/e23fcbc7-a974-4e3e-8551-5e2346813093"
+    />
+    <Caption>
+      Don't stack too many river breakouts on top of other river components that
+      show a full-width image. This dimishes the visual impact the river
+      breakout is intended to provide.
+    </Caption>
+  </Dont>
+</DoDontContainer>
+
 ## Anatomy
 
 ![A river component used to showcase a security feature. The title reads "Get security feedback with every git push" and it includes an image showing screenshots of of a CLI prompt with the git push command and a code scanning screenshot.](https://github.com/primer/brand/assets/912236/859bef31-aff0-4f75-83b1-e1dc22305f9d)
