--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -133,7 +133,7 @@ Some examples of when to use a breakout river:
     />
     <Caption>
       Don't stack too many river breakouts on top of other river components that
-      show a full-width image. This dimishes the visual impact the river
+      show a full-width image. This diminishes the visual impact the river
       breakout is intended to provide.
     </Caption>
   </Dont>
