--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -123,7 +123,7 @@ Some examples of when to use a breakout river:
     />
     <Caption>
       Use a river breakout to emphasize a part of the river or break up a series
-      of river component.
+      of river components.
     </Caption>
   </Do>
   <Dont>
