--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -105,7 +105,7 @@ A single river component acts as a section and it should not include any child s
 
 ### Breakout river
 
-A river component has an image that fills the width of the container while providing more space for content such as text and lists.
+A river breakout component has an image that fills the width of the container while providing more space for content such as text and lists.
 
 This is useful when you want to create a highlight which can be used to create more emphasis or simply break a monotonous vertical flow of left/right rivers. It can also be helpful on smaller viewports to avoid the of stacking two images or two chunks of text from adjacent river components.
 
