makes revisions to design docs and React docs

--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -107,7 +107,7 @@ A single river component acts as a section and it should not include any child s
 
 A river breakout component has an image that fills the width of the container while providing more space for content such as text and lists.
 
-This is useful when you want to create a highlight which can be used to create more emphasis or simply break a monotonous vertical flow of left/right rivers. It can also be helpful on smaller viewports to avoid the of stacking two images or two chunks of text from adjacent river components.
+This is useful when you want to create a highlight which can be used to create more emphasis or simply break a monotonous vertical flow of left/right rivers. It can also be helpful on smaller viewports to avoid stacking two images or two chunks of text from adjacent river components.
 
 Some examples of when to use a breakout river:
 
@@ -132,9 +132,9 @@ Some examples of when to use a breakout river:
       src="https://github.com/primer/brand/assets/2313998/e23fcbc7-a974-4e3e-8551-5e2346813093"
     />
     <Caption>
-      Don't stack too many river breakouts on top of other river components that
-      show a full-width image. This diminishes the visual impact the river
-      breakout is intended to provide.
+      Don't stack river breakouts on top of other river breakout components or
+      center-aligned river components. These both show a full-width image. This
+      diminishes the visual impact the river breakout is intended to provide.
     </Caption>
   </Dont>
 </DoDontContainer>
