--- a/apps/docs/content/components/River/react.mdx
+++ b/apps/docs/content/components/River/react.mdx
@@ -18,7 +18,7 @@ import {
 import {PropTableValues} from '../../../src/components'
 
 ```js
-import {River} from '@primer/react-brand'
+import {River, RiverBreakout} from '@primer/react-brand'
 ```
 
 ## Examples
@@ -176,7 +176,10 @@ import {River} from '@primer/react-brand'
 <RiverBreakout>
   <RiverBreakout.A11yHeading>Accelerate workflows</RiverBreakout.A11yHeading>
   <RiverBreakout.Visual>
-    <PlaceholderImage />
+    <img
+      src="https://via.placeholder.com/600x400/f5f5f5/f5f5f5.png"
+      alt="placeholder, blank area with an off-white background color"
+    />
   </RiverBreakout.Visual>
   <RiverBreakout.Content
     trailingComponent={() => (
