adds guidance that a RiverBreakout cannot exclude the headline

--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -139,6 +139,25 @@ Some examples of when to use a breakout river:
   </Dont>
 </DoDontContainer>
 
+The headline in the river component must always be present, but the supplemental content is optional.
+
+<DoDontContainer>
+  <Do>
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/2313998/433b1fba-4505-452b-8f8c-7cda69cc316d"
+    />
+    <Caption>Exclude the supplemental content if it's not needed.</Caption>
+  </Do>
+  <Dont>
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/2313998/62cf1c98-6b7d-46e9-a2d4-6d211a9103ad"
+    />
+    <Caption>Don't exclude the headline.</Caption>
+  </Dont>
+</DoDontContainer>
+
 ## Anatomy
 
 ![A river component used to showcase a security feature. The title reads "Get security feedback with every git push" and it includes an image showing screenshots of of a CLI prompt with the git push command and a code scanning screenshot.](https://github.com/primer/brand/assets/912236/859bef31-aff0-4f75-83b1-e1dc22305f9d)
