Remove small docs examples

--- a/apps/docs/content/components/Label/index.mdx
+++ b/apps/docs/content/components/Label/index.mdx
@@ -53,36 +53,7 @@ Use Label with with short, scannable text. If possible, use a single word to des
 
 ### Size
 
-Labels come in three sizes: `small`, `medium`, and `large`.
-
-### Small
-
-Use the `small` size for inline text or list items.
-
-<Container
-  display="grid"
-  gridTemplateColumns={['1fr', null, null, null, '1fr 1fr']}
-  gridGap={5}
->
-  <div>
-    <img
-      src="https://github.com/primer/brand/assets/912236/ee4b9073-8ae6-4178-bed5-2c54f6949656"
-      alt=""
-    />
-    <Caption>
-      Use inline small labels in a list of short content items for a quick scan.
-    </Caption>
-  </div>
-  <div>
-    <img
-      src="https://github.com/primer/brand/assets/912236/730a7836-40bb-461f-816f-1e1af39e6348"
-      alt=""
-    />
-    <Caption>
-      Give small labels enough space when used with longer content.
-    </Caption>
-  </div>
-</Container>
+Labels come in two sizes: `medium`, and `large`.
 
 ### Medium
 
