--- a/apps/docs/content/components/Timeline.mdx
+++ b/apps/docs/content/components/Timeline.mdx
@@ -7,7 +7,6 @@ description: Use the timeline component to display a list of connected items as 
 a11yReviewed: false
 ---
 
-
 import {PropTableValues} from '../../src/components'
 
 ```js
@@ -15,6 +14,12 @@ import {Timeline} from '@primer/react-brand'
 ```
 
 ## Examples
+
+<Note>
+
+Timeline requires the `dir` attribute to be set on the `<html>` element to ensure the correct visual apperance of timeline items.
+
+</Note>
 
 ### Default
 
@@ -67,7 +72,7 @@ Use an `<em>` element within the timeline items to apply a duotone style and emp
 
 ### Timeline.Item
 
-| Name        | Type                                   |  Default  | Description                              |
-| :---------- | :------------------------------------- | :-------: | :--------------------------------------- |
-| `className` | `string`                               |           | Sets a custom class on the root element  |
-| `children`  | `React.ReactNode`, `React.ReactNode[]` |  | Content to be displayed within the item. |
+| Name        | Type                                   | Default | Description                              |
+| :---------- | :------------------------------------- | :-----: | :--------------------------------------- |
+| `className` | `string`                               |         | Sets a custom class on the root element  |
+| `children`  | `React.ReactNode`, `React.ReactNode[]` |         | Content to be displayed within the item. |
