--- a/apps/docs/content/components/Testimonial/react.mdx
+++ b/apps/docs/content/components/Testimonial/react.mdx
@@ -14,7 +14,7 @@ import {Box as Container, Label} from '@primer/react'
 import {PropTableValues} from '../../../src/components'
 
 ```js
-import {Testimonial} from '@primer/react-brand'
+import {Testimonial, TestimonialQuoteMarkColors} from '@primer/react-brand'
 ```
 
 ## Examples
@@ -137,14 +137,15 @@ Pass additional content about the testimonial provider using `position`.
 
 `Testimonial` passes contextual data to its child inputs, labels, validation messaging and more.
 
-| Name        | Type                                                                                                                                                         |  Default  | Description                              |
-| :---------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------: | :--------------------------------------- |
-| `children`  | <PropTableValues addLineBreaks values={['Testimonial.Quote','Testimonial.Name','Testimonial.Logo','Testimonial.Avatar','React.ReactNode' ]} addLineBreaks /> |           | Valid child nodes                        |
-| `className` | `string`                                                                                                                                                     |           | Sets a custom class                      |
-| `id`        | `string`                                                                                                                                                     |           | Sets a custom id                         |
-| `align`     | <PropTableValues addLineBreaks values={['start','center']}/>                                                                                                 | `'start'` | Set alignment of inner text              |
-| `ref`       | `React.RefObject`                                                                                                                                            |           | Forward a Ref to the underlying DOM node |
-| `size`      | <PropTableValues addLineBreaks values={['small','large']}/>                                                                                                  | `'small'` | Set size of quote's text                 |
+| Name             | Type                                                                                                                                                         |   Default   | Description                                   |
+| :--------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------- | :---------: | :-------------------------------------------- |
+| `children`       | <PropTableValues addLineBreaks values={['Testimonial.Quote','Testimonial.Name','Testimonial.Logo','Testimonial.Avatar','React.ReactNode' ]} addLineBreaks /> |             | Valid child nodes                             |
+| `className`      | `string`                                                                                                                                                     |             | Sets a custom class                           |
+| `id`             | `string`                                                                                                                                                     |             | Sets a custom id                              |
+| `align`          | <PropTableValues addLineBreaks values={['start','center']}/>                                                                                                 |  `'start'`  | Set alignment of inner text                   |
+| `ref`            | `React.RefObject`                                                                                                                                            |             | Forward a Ref to the underlying DOM node      |
+| `size`           | <PropTableValues addLineBreaks values={['small','large']}/>                                                                                                  |  `'small'`  | Set size of quote's text                      |
+| `quoteMarkColor` | <PropTableValues addLineBreaks values={TestimonialQuoteMarkColors}/>                                                                                         | `'default'` | Color or gradient fill of the the quote mark. |
 
 <h3 id="Testimonial-name">
   Testimonial.Name <Label>Required</Label>
